--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -17,7 +17,7 @@ timeout=70000
     weight = 3
   [languages.ru]
     contentDir = 'content/ru'
-    languageName = 'Russian'
+    languageName = 'Русский'
     weight = 3
 
 [markup.goldmark.renderHooks.image]
