--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -1,7 +1,7 @@
-title = "Kalachlegends"
+title = "Kalachlegends | Artem Kalachev"
 [params]
  mainSections = ["blog", "samples", "posts"]
-description = "My blog and projects."
+description = "Kalachlegends's (Artem Kalachev) blog and projects."
 [params.author]
 name = "Artem Kalachev, kalachlegends"
 image = "img/author.png"
